@@ -104,11 +104,6 @@ if %ERRORLEVEL% neq 0 (
 )
 
 ::
-:: Append hadoop libs to classpath after arguments are parsed.
-::
-set CP=%CP%;%GRIDGAIN_HOME%\libs\%HADOOP_LIB_DIR%\*
-
-::
 :: Process 'restart'.
 ::
 set RANDOM_NUMBER_COMMAND="%JAVA_HOME%\bin\java.exe" -cp %CP% org.gridgain.grid.startup.cmdline.GridCommandLineRandomNumberGenerator
@@ -119,6 +114,8 @@ set RESTART_SUCCESS_OPT=-DGRIDGAIN_SUCCESS_FILE=%RESTART_SUCCESS_FILE%
 
 ::
 :: Find available port for JMX
+::
+:: You can specify GRIDGAIN_JMX_PORT environment variable for overriding automatically found JMX port
 ::
 for /F "tokens=*" %%A in ('""%JAVA_HOME%\bin\java" -cp "%GRIDGAIN_HOME%\libs\*" org.gridgain.grid.util.portscanner.GridJmxPortFinder"') do (
     set JMX_PORT=%%A
@@ -145,7 +142,16 @@ if "%JMX_PORT%" == "" (
 ::
 :: ADD YOUR/CHANGE ADDITIONAL OPTIONS HERE
 ::
-if "%JVM_OPTS%" == "" set JVM_OPTS=-Xms1g -Xmx1g -server -XX:+AggressiveOpts
+set BASE_JVM_OPTS=-Xms1g -Xmx1g -server -XX:+AggressiveOpts
+
+if "%JVM_OPTS%" == "" (
+    :: Hadoop needs class unloading enabled and large size of perm space.
+    if defined GRIDGAIN_HADOOP_CLASSPATH (
+        set JVM_OPTS=%BASE_JVM_OPTS% -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m
+    ) else (
+        set JVM_OPTS=%BASE_JVM_OPTS%
+    )
+)
 
 ::
 :: Uncomment the following GC settings if you see spikes in your throughput due to Garbage Collection.
@@ -190,11 +196,11 @@ if "%MAIN_CLASS%" == "" set MAIN_CLASS=org.gridgain.grid.startup.cmdline.GridCom
 ::
 
 if "%INTERACTIVE%" == "1" (
-    "%JAVA_HOME%\bin\java.exe" %JVM_OPTS% %QUIET% %RESTART_SUCCESS_OPT% %JMX_MON% -DGRIDGAIN_SCRIPT ^
+    "%JAVA_HOME%\bin\java.exe" %JVM_OPTS% %QUIET% %RESTART_SUCCESS_OPT% %JMX_MON% ^
     -DGRIDGAIN_UPDATE_NOTIFIER=false -DGRIDGAIN_HOME="%GRIDGAIN_HOME%" -DGRIDGAIN_PROG_NAME="%PROG_NAME%" %JVM_XOPTS% ^
     -cp "%CP%" %MAIN_CLASS%
 ) else (
-    "%JAVA_HOME%\bin\java.exe" %JVM_OPTS% %QUIET% %RESTART_SUCCESS_OPT% %JMX_MON% -DGRIDGAIN_SCRIPT ^
+    "%JAVA_HOME%\bin\java.exe" %JVM_OPTS% %QUIET% %RESTART_SUCCESS_OPT% %JMX_MON% ^
     -DGRIDGAIN_UPDATE_NOTIFIER=false -DGRIDGAIN_HOME="%GRIDGAIN_HOME%" -DGRIDGAIN_PROG_NAME="%PROG_NAME%" %JVM_XOPTS% ^
     -cp "%CP%" %MAIN_CLASS% "%CONFIG%"
 )
